# LinuxApplicationDevelopment2024

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  prog.c
06_Tracing/: Makefile  move.c  protect.c
07_Environmental/: Makefile.am  configure.ac
07_Environmental/src/: rhasher.c
08_I18n/: Makefile.am  bin_search.c  configure.ac  ru.po
09_PatchDiff/: Makefile  labirintus.c  v1.patch  v2.patch  v3.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.h
10_LibTesting/tests/: Makefile.am  test_buf.ts
11_Documenting/: Makefile.am  README.md  bin_search.c  configure.ac  ru.po
12_InstallPackaging/: Doxyfile.in  Makefile.am  README.md  bin_search.c  configure.ac  install_bin_search.sh  ru.po  uninstall_bin_search.sh
12_InstallPackaging/tests/: Makefile.am  test_bin_search.ts
